base/src/test/resources/failure/tyck/nonsigma-tup.aya.txt
In file $FILE:1:19 ->

  1 | def test : Type => (Type, Type)
                         ^----------^

Error: Unable to construct the expression
         (Type, Type)
       because the type you checks it against is not a Sigma type, but instead:
         Type
         (Normalized: Type)

1 error(s), 0 warning(s).
What are you doing?
